<resources>
    <string name="app_name">TheSocialNetwork</string>
    <string name="feat_login_welcome">Welcome to TheSocialNetwork</string>
    <string name="feat_login_subtitle">please Sing-in to continue</string>

    <string name="feat_search_friends_title">search a friend</string>
    <string name="feat_login_new_to_the_social_network">New to The Social Network?</string>
    <string name="feat_joined_new_to_the_social_network">Joined us Before?</string>
    <string name="feat_login_register">Register</string>

    <string name="feat_login_login">Login</string>
    <string name="feat_login_continue">Continue</string>
    <string name="feat_login_google">Login with Google</string>
    <string name="feat_login_or">OR</string>
    
    <string name="link_site">https://desarrolloweb.com/articulos/trabajar-ramas-git.html</string>


</resources>