<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/img_social_illustration"
        app:layout_constraintBottom_toTopOf="@+id/form"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_large"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/newTexView"
            style="@style/TheSocialNetwork.TextStyle.primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/register"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/feat_login_new_to_the_social_network"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/register"
            style="@style/TheSocialNetwork.TextStyle.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_size_small"
            android:text="@string/feat_login_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/newTexView"
            />

        <Button
            android:id="@+id/google"
            style="@style/TheSocialNetwork.Widget.Button.Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_large"
            android:gravity="center"
            android:paddingHorizontal="36dp"
            android:text="@string/feat_login_google"
            android:drawableStart="@drawable/ic_google"
            app:layout_constraintBottom_toTopOf="@id/register"

            />

        <TextView
            android:id="@+id/or"
            style="@style/TheSocialNetwork.TextStyle"
            android:layout_width="wrap_content"
            android:text="@string/feat_login_or"
            android:layout_marginBottom="@dimen/space_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/google"

            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toStartOf="@+id/or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/or"
            app:layout_constraintBottom_toBottomOf="@id/or"
            android:background="@color/separator"
            android:layout_marginEnd="@dimen/space_small"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/or"
            app:layout_constraintTop_toTopOf="@id/or"
            app:layout_constraintBottom_toBottomOf="@id/or"
            android:background="@color/separator"
            android:layout_marginStart="@dimen/space_small"
            />

        <Button
            android:id="@+id/login"
            style="@style/TheSocialNetwork.Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_small"
            android:text="@string/feat_login_login"
            android:elevation="0dp"
            app:layout_constraintBottom_toTopOf="@id/or"
            />

        <TextView
            android:id="@+id/forgotPassword"
            style="@style/TheSocialNetwork.TextStyle.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Forgot Password?"
            app:layout_constraintBottom_toTopOf="@id/login"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/TheSocialNetwork.Widget.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="Password"
            app:layout_constraintBottom_toTopOf="@id/forgotPassword"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/selector_password_toggle"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/TheSocialNetwork.Widget.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/TheSocialNetwork.Widget.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="Email"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/TheSocialNetwork.Widget.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            style="@style/TheSocialNetwork.TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Login"
            app:layout_constraintBottom_toTopOf="@id/emailInputLayout"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>